Added an empty template

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     on the page.</p>
           </div> <!--sidebar -->
         </div> <!-- content -->
-        <div id="bottom">Submit this assignment by </div>
+        <div id="bottom">Submit this assignment by 1/22/21</div>
       </div> <!-- document -->
       
       <script>
