Fixed issue with <a href> links opening to online week03.html example code instead of updated student stylesheets

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <p>There are four stylesheets that you may select from. Each one will change the coloring, fonts, 
             		and even the layout of the page.You can change the layout of this page by selecting different 
                     stylesheets in the menu, or by selecting one of the following links:<br>
-              <a href="https://content.byui.edu/file/5baa7973-1f47-4b74-bc67-7782514e10e4/1/Teach/213.03.TeachProblem.html#" onclick="applyStyle(0)">Stylesheet 1</a>,
-              <a href="https://content.byui.edu/file/5baa7973-1f47-4b74-bc67-7782514e10e4/1/Teach/213.03.TeachProblem.html#" onclick="applyStyle(1)">Stylesheet 2</a>,
-              <a href="https://content.byui.edu/file/5baa7973-1f47-4b74-bc67-7782514e10e4/1/Teach/213.03.TeachProblem.html#" onclick="applyStyle(2)">Stylesheet 3</a>,
-              <a href="https://content.byui.edu/file/5baa7973-1f47-4b74-bc67-7782514e10e4/1/Teach/213.03.TeachProblem.html#" onclick="applyStyle(3)">Stylesheet 4</a>.
+              <a href="#" onclick="applyStyle(0)">Stylesheet 1</a>,
+              <a href="#" onclick="applyStyle(1)">Stylesheet 2</a>,
+              <a href="#" onclick="applyStyle(2)">Stylesheet 3</a>,
+              <a href="#" onclick="applyStyle(3)">Stylesheet 4</a>,
+              <a href="#" onclick="disableStyles()">No Stylesheet</a>
             </p>
              <h1>Instructions</h1>
             <p>Please modify this page to include a description of each stylesheet, including anything clever that 
